# pydna-analyzer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  analyze_dna.py  compare_promethease.py  pyproject.toml
docs/plans/: 2026-02-14-ancestry-estimation-design.md  2026-02-14-ancestry-estimation-plan.md  2026-02-28-rest-api-design.md  2026-02-28-rest-api-plan.md  2026-03-01-vcf-improvements-design.md  2026-03-01-vcf-improvements-plan.md
examples/: cardiovascular_prs.csv
genomeinsight/: __init__.py  cli.py
genomeinsight/ai/: __init__.py  client.py  prompts.py  report_generator.py
genomeinsight/ancestry/: __init__.py  estimator.py  reference_data.py
genomeinsight/ancestry/data/: aim_frequencies.json
genomeinsight/api/: __init__.py  routes.py  schemas.py
genomeinsight/clinical/: __init__.py  analyzer.py  apoe.py  variants.py
genomeinsight/core/: __init__.py  data_loader.py
genomeinsight/pharmacogenomics/: __init__.py
genomeinsight/polygenic/: __init__.py
genomeinsight/reports/: html_report.py  json_export.py
pydna_analyzer/: __init__.py  cli.py
pydna_analyzer/ai/: __init__.py  client.py  prompts.py  report_generator.py
pydna_analyzer/ancestry/: __init__.py  estimator.py
pydna_analyzer/api/: __init__.py  routes.py  schemas.py
pydna_analyzer/clinical/: analyzer.py
pydna_analyzer/core/: __init__.py  data_loader.py
pydna_analyzer/pharmacogenomics/: __init__.py
pydna_analyzer/polygenic/: __init__.py
pydna_analyzer/reports/: html_report.py  json_export.py
tests/: __init__.py  conftest.py  test_ai.py  test_ancestry.py  test_api.py  test_apoe.py  test_cli.py  test_clinical_analyzer.py  test_compare_promethease.py  test_data_loader.py  test_pgx.py  test_prs.py  test_reports.py  test_vcf_loader.py
