[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genomeinsight"
version = "0.1.0"
description = "A privacy-first personal genomics toolkit for analyzing DNA data from consumer testing services"
readme = "README.md"
license = "MIT"
authors = [
    { name = "GenomeInsight Contributors" }
]
keywords = [
    "genomics",
    "genetics",
    "DNA",
    "ancestry",
    "pharmacogenomics",
    "SNP",
    "personal-genomics",
    "bioinformatics",
    "23andme",
    "ancestrydna",
    "clinical-variants",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "plotly>=5.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
prs = [
    "pandasPGS>=0.1",
]
pgx = [
    "pypgx>=0.20",
]
ancestry = [
    "scikit-allel>=1.3",
    "scikit-learn>=1.3",
]
all = [
    "genomeinsight[dev,prs,pgx,ancestry]",
]

[project.scripts]
genomeinsight = "genomeinsight.cli:app"

[project.urls]
Homepage = "https://github.com/genomeinsight/genomeinsight"
Documentation = "https://github.com/genomeinsight/genomeinsight#readme"
Repository = "https://github.com/genomeinsight/genomeinsight"
Issues = "https://github.com/genomeinsight/genomeinsight/issues"
Changelog = "https://github.com/genomeinsight/genomeinsight/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["genomeinsight"]

# ==========================================
# uv configuration
# ==========================================
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

# ==========================================
# Ruff (linting & formatting)
# ==========================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PTH"]
ignore = ["E501"]  # Line length handled separately

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==========================================
# Pytest
# ==========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# ==========================================
# MyPy
# ==========================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
